--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --yellow:#fca311;
-    --light-yellow:#14213d;
+    --blue:#14213d;
     --black:#130f40;
     --light-color:#666;
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
@@ -48,7 +48,7 @@ section{
     bottom:1rem; left:0;
     height: 100%;
     width: 100%;
-    background: var(--light-yellow);
+    background: var(--blue);
     z-index: -1;
     clip-path: polygon(0 90%, 100% 80%, 100% 100%, 0% 100%);
 }
@@ -57,7 +57,7 @@ section{
     display: inline-block;
     margin-top: 1rem;
     padding:.8rem 3rem;
-    background:var(--light-yellow);
+    background:var(--blue);
     color:white;
     cursor: pointer;
     font-size: 1.7rem;
@@ -219,62 +219,6 @@ section{
     margin:1rem 0;
 }
 
-.icons-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap:1.5rem;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    background: #eee;
-}
-
-.icons-container .icons{
-    background:#fff;
-    display: flex;
-    align-items: center;
-    box-shadow: var(--box-shadow);
-    border-radius: .5rem;
-    padding:2rem;
-    gap:1.5rem;
-}
-
-.icons-container .icons i{
-    height:5rem;
-    width:5rem;
-    line-height:5rem;
-    font-size:2.5rem;
-    color:var(--black);
-    background:#eee;
-    text-align: center;
-    border-radius: 50%;
-}
-
-.icons-container .icons .content h3{
-    font-size: 2.5rem;
-    color:var(--yellow);
-}
-
-.icons-container .icons .content p{
-    font-size: 1.5rem;
-    color:var(--light-color);
-}
-
-.icons-container .icons:hover{
-    background:var(--black);
-}
-
-.icons-container .icons:hover i{
-    background:var(--yellow);
-}
-
-.icons-container .icons:hover .content h3{
-    color:#fff;
-}
-
-.icons-container .icons:hover .content p{
-    color:#eee;
-}
-
 .newsletter{
     padding:6rem 2rem;
     background: url("/image/subscribe.png") no-repeat;
@@ -322,7 +266,7 @@ section{
     width:17rem;
     font-size: 1.7rem;
     color:white;
-    background: var(--light-yellow);
+    background: var(--blue);
     cursor: pointer;
 }
 
@@ -535,7 +479,7 @@ section{
 }
 
 .footer{
-    background: var(--light-yellow);
+    background: var(--blue);
     padding-bottom: 8rem;
 }
 
