--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 :root{
-    --yellow:#fca311;
-    --blue:#14213d;
-    --black:#130f40;
+    --slate:#35605A;
+    --green:#002517;
     --light-color:#666;
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
     --border:.1rem solid rgba(0,0,0,.1);
@@ -34,7 +33,7 @@ section{
     padding-bottom: 2rem;
     text-align: center;
     font-size: 4.5rem;
-    color:var(--black);
+    color:var(--green);
 }
 
 .heading span{
@@ -48,7 +47,7 @@ section{
     bottom:1rem; left:0;
     height: 100%;
     width: 100%;
-    background: var(--blue);
+    background: var(--green);
     z-index: -1;
     clip-path: polygon(0 90%, 100% 80%, 100% 100%, 0% 100%);
 }
@@ -57,7 +56,7 @@ section{
     display: inline-block;
     margin-top: 1rem;
     padding:.8rem 3rem;
-    background:var(--blue);
+    background:var(--green);
     color:white;
     cursor: pointer;
     font-size: 1.7rem;
@@ -67,7 +66,7 @@ section{
 }
 
 .btn:hover{
-    background:var(--yellow);
+    background:var(--slate);
 }
 
 .header{
@@ -83,26 +82,26 @@ section{
 
 .header .logo{
     font-size: 2.5rem;
-    color:var(--black);
+    color:var(--green);
     font-weight: bold;
 }
 
 .header .logo span{
-    color:var(--yellow);
+    color:var(--slate);
 }
 
 .header .logo:hover{
-    color:var(--yellow);
+    color:var(--slate);
 }
 
 .header .navbar a{
     margin:0 1rem;
     font-size: 1.7rem;
-    color:var(--black);
+    color:var(--green);
 }
 
 .header .navbar a:hover{
-    color:var(--yellow);
+    color:var(--slate);
 }
 
 #login-btn .btn{
@@ -169,7 +168,7 @@ section{
     margin:.7rem 0;
     width: 100%;
     font-size: 1.6rem;
-    color:var(--black);
+    color:var(--green);
     text-transform: none;
     border:var(--border);
     padding:1rem 1.2rem;
@@ -183,14 +182,14 @@ section{
 }
 
 .login-form-container form p a{
-    color:var(--yellow);
+    color:var(--slate);
     text-decoration: underline;
 }
 
 .login-form-container form h3{
     padding-bottom:1rem;
     font-size: 2.5rem;
-    color:var(--black);
+    color:var(--green);
     text-transform: uppercase;
 }
 
@@ -198,7 +197,7 @@ section{
     position: absolute;
     top:1.5rem; right:2.5rem;
     font-size: 5rem;
-    color:var(--black);
+    color:var(--green);
     cursor: pointer;
 }
 
@@ -209,7 +208,7 @@ section{
 }
 
 .home h3{
-    color:var(--black);
+    color:var(--green);
     font-size: 7.5vw;
     text-transform: uppercase;
 }
@@ -257,7 +256,7 @@ section{
     width:100%;
     padding:0 2rem;
     font-size: 1.6rem;
-    color:var(--black);
+    color:var(--green);
     text-transform: none;
 }
 
@@ -266,12 +265,12 @@ section{
     width:17rem;
     font-size: 1.7rem;
     color:white;
-    background: var(--blue);
+    background: var(--green);
     cursor: pointer;
 }
 
 .newsletter form input[type="submit"]:hover{
-    background: var(--yellow);
+    background: var(--slate);
 }
 
 .vehicles .vehicles-slider{
@@ -304,12 +303,12 @@ section{
 
 .vehicles .vehicles-slider .box .content h3{
     font-size: 2.5rem;
-    color:var(--black);
+    color:var(--green);
 }
 
 .vehicles .vehicles-slider .box .content .price{
     font-size: 2.2rem;
-    color:var(--yellow);
+    color:var(--slate);
     padding:1rem 0;
     font-weight: bolder;
 }
@@ -330,12 +329,12 @@ section{
 
 .vehicles .vehicles-slider .box .content span{
     font-size: 1rem;
-    color:var(--yellow);
+    color:var(--slate);
     padding:0 .5rem;
 }
 
 .swiper-pagination-bullet-active{
-    background: var(--yellow);
+    background: var(--slate);
 }
 
 .loan {
@@ -369,13 +368,13 @@ section{
 
 .loan .row form h3{
     font-size: 3rem;
-    color:var(--black);
+    color:var(--green);
     padding-bottom: 1rem;
 }
 
 .loan .row form label {
     font-size: 1.75rem;
-    color:var(--black);
+    color:var(--green);
     padding-left: .25rem;
 }
 
@@ -423,13 +422,13 @@ section{
 }
 
 .reviews .review-slider .box .content h3{
-    color:var(--black);
+    color:var(--green);
     font-size: 2.2rem;
     padding-bottom: .5rem;
 }
 
 .reviews .review-slider .box .content .stars i{
-    color:var(--yellow);
+    color:var(--slate);
     font-size: 1.7rem;
 }
 
@@ -464,12 +463,12 @@ section{
 
 .listings .box .content h3{
     font-size: 2.5rem;
-    color:var(--black);
+    color:var(--green);
 }
 
 .listings .box .content .price{
     font-size: 2.2rem;
-    color:var(--yellow);
+    color:var(--slate);
     padding:1rem 0;
     font-weight: bolder;
 }
@@ -490,7 +489,7 @@ section{
 
 .listings .box .content span{
     font-size: 1rem;
-    color:var(--yellow);
+    color:var(--slate);
     padding:0 .5rem;
 }
 
@@ -521,7 +520,7 @@ section{
 
 .contact .row form h3{
     font-size: 3rem;
-    color:var(--black);
+    color:var(--green);
     padding-bottom: 1rem;
 }
 
@@ -541,7 +540,7 @@ section{
 }
 
 .footer{
-    background: var(--blue);
+    background: var(--green);
     padding-bottom: 8rem;
 }
 
@@ -554,19 +553,19 @@ section{
 .footer .box-container .box h3{
     font-size: 2.2rem;
     padding:1rem 0;
-    color:var(--black);
+    color:#fff;
 }
 
 .footer .box-container .box a{
     display: block;
     font-size: 1.4rem;
     padding:1rem 0;
-    color:var(--light-color);
+    color: rgb(185, 185, 185);
 }
 
 .footer .box-container .box a i{
     padding-right: .5rem;
-    color:var(--black);
+    color:#fff;
 }
 
 .footer .box-container .box a:hover i{
