added surya review (still needs picture)

--- a/css/style.css
+++ b/css/style.css
@@ -699,7 +699,7 @@ section{
     margin-top: 2rem;
     border-top: var(--border);
     font-size: 2rem;
-    color:#9c9c9c;
+    color:#fff;
 }
 
 @media (max-width:2000px) {
