--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,10 @@ section{
     margin:.7rem 0;
 }
 
+.reviews {
+    padding-bottom: 2rem;
+}
+
 .reviews .review-slider{
     padding-bottom: 3rem;
 }
@@ -450,6 +454,45 @@ section{
 .reviews .review-slider .box .content .stars i{
     color:var(--yellow);
     font-size: 1.7rem;
+}
+
+.ab {
+    background: url("/image/aboutUs_bg.png") no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;  
+    min-height: 20vh;
+}
+
+.ab .heading {
+    color: #fff;
+}
+
+.ab .row .box {
+    background-color: #fff;
+    padding:5rem;
+    margin: auto;
+    width: 100%;
+    box-shadow: var(--box-shadow);
+    border:var(--border);
+    border-radius: 3rem;
+    margin-bottom: 2rem;
+}
+
+.ab .row .content-box {
+    outline-color: var(--slate);
+    outline-style: ridge;
+    outline-width: 0.5rem;
+    outline-offset: -1rem;
+}
+
+.ab .row .box:hover {
+    transform: scale(1.01);
+}
+
+.ab .row .box h1 {
+    color: var(--green);
+    font-size: 2.5rem;
 }
 
 .selection {
