--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,7 @@ section{
     background-position: center;
     background-attachment: fixed;  
     min-height: 20vh;
+    padding-bottom: 6rem;
 }
 
 .aboutUs .heading {
