--- a/css/z.css
+++ b/css/z.css
@@ -10,9 +10,10 @@ body {
 }
 
 .slide {
+    background-color: black ;
     inset: 0;
     position: absolute;
-    background-image: url(/image/abstract1.jpeg);
+    background-image: url(/image/backgrounds/abstract1.jpeg);
     background-size: cover;
     background-position: center; 
     min-height: 100vh;
@@ -24,7 +25,7 @@ body {
     z-index: 2;
     background: none;
     border: none;
-    font-size: 4rem;
+    font-size: 6rem;
     top: 50%;
     transform: translate(-50%);
     color: white;
@@ -38,11 +39,13 @@ body {
 }
 
 .slider-button.prev {
+    text-align: right;
     left: 5%;
 }
 
 .slider-button.next {
-    right: 5%;
+    text-align: right;
+    right: 0%;
 }
 
 .slide img {
@@ -50,8 +53,7 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     width: 50%;
 }
 
