--- a/css/z.css
+++ b/css/z.css
@@ -9,18 +9,13 @@ body {
     color: white;
 }
 
-.slide {
-    background-color: black ;
-    inset: 0;
-    position: absolute;
-    background-image: url(/image/backgrounds/abstract1.jpeg);
-    background-size: cover;
-    background-position: center; 
-    min-height: 100vh;
-    min-width: 100%;
-}   
+.slider .arrows {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
 
-.slider-button {
+.slider .arrows .slider-button {
     position: absolute;
     z-index: 2;
     background: none;
@@ -32,23 +27,28 @@ body {
 
 }
 
-.arrows {
-    text-align: center;
-    width: 50%;
-    margin: auto;
-}
-
-.slider-button.prev {
+.slider .arrows .slider-button.prev {
     text-align: right;
     left: 5%;
 }
 
-.slider-button.next {
+.slider .arrows .slider-button.next {
     text-align: right;
     right: 0%;
 }
 
-.slide img {
+.slider .slide {
+    background-color: black ;
+    inset: 0;
+    position: absolute;
+    background-image: url(/image/backgrounds/abstract1.jpeg);
+    background-size: cover;
+    background-position: center; 
+    min-height: 100vh;
+    min-width: 100%;
+}   
+
+.slider .slide img {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -57,7 +57,7 @@ body {
     width: 50%;
 }
 
-.slide .name {
+.slider .slide .name {
     font-family: 'Unbounded', cursive;
     font-size: 3rem;
     margin: auto;
@@ -66,12 +66,12 @@ body {
     padding-top: 1rem;
 }
 
-.slide .description {
+.slider .slide .description {
     font-family: 'Fira Code', monospace;
     width: 45%;
     margin: auto;
 }
 
-.slider-price {
+.slider .slide .description .slider-price{
     padding-bottom: 3rem;
 }
