slider arrows fixed

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ section{
     top: 50%;
     transform: translate(-50%);
     color: white;
-
+    filter: invert(1);
 }
 
 .slider .arrows .slider-button.prev {
@@ -288,6 +288,7 @@ section{
 }   
 
 .slider .slide img {
+    padding-top: 11rem;
     object-fit: cover;
     width: 100%;
     height: 100%;
