--- a/css/style.css
+++ b/css/style.css
@@ -241,81 +241,6 @@ section{
     margin:1rem 0;
 }
 
-.slider {
-    width: 100vw;
-    height: 80vh;
-    position: relative;
-    color: white;
-}
-
-.slider .arrows {
-    text-align: center;
-    width: 50%;
-    margin: auto;
-}
-
-.slider .arrows .slider-button {
-    position: absolute;
-    z-index: 2;
-    background: none;
-    border: none;
-    font-size: 6rem;
-    top: 50%;
-    transform: translate(-50%);
-    color: white;
-    filter: invert(1);
-}
-
-.slider .arrows .slider-button.prev {
-    text-align: right;
-    left: 5%;
-}
-
-.slider .arrows .slider-button.next {
-    text-align: right;
-    right: 0%;
-}
-
-.slider .slide {
-    background-color: black ;
-    inset: 0;
-    position: absolute;
-    background-image: url(/image/backgrounds/abstract1.jpeg);
-    background-size: cover;
-    background-position: center; 
-    min-height: 100vh;
-    min-width: 100%;
-}   
-
-.slider .slide img {
-    padding-top: 11rem;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    display: block;
-    margin: auto;
-    width: 50%;
-}
-
-.slider .slide .name {
-    font-family: 'Unbounded', cursive;
-    font-size: 3rem;
-    margin: auto;
-    width: 80%;
-    text-align: center;
-    padding-top: 1rem;
-}
-
-.slider .slide .description {
-    font-family: 'Fira Code', monospace;
-    width: 45%;
-    margin: auto;
-}
-
-.slider .slide .description .slider-price{
-    padding-bottom: 3rem;
-}
-
 .newsletter{
     padding:6rem 2rem;
     background: url("/image/backgrounds/subscribe.png") no-repeat;
@@ -368,6 +293,82 @@ section{
 
 .newsletter form input[type="submit"]:hover{
     background: var(--slate);
+}
+
+.slider {
+    width: 100vw;
+    height: 80vh;
+    position: relative;
+    color: white;
+}
+
+.slider .arrows {
+    text-align: center;
+    width: 50%;
+    margin: auto;
+}
+
+.slider .arrows .slider-button {
+    position: absolute;
+    z-index: 2;
+    background: none;
+    border: none;
+    font-size: 6rem;
+    top: 50%;
+    transform: translate(-50%);
+    color: white;
+    filter: invert(1);
+}
+
+.slider .arrows .slider-button.prev {
+    text-align: right;
+    left: 5%;
+}
+
+.slider .arrows .slider-button.next {
+    text-align: right;
+    right: 0%;
+}
+
+.slider .slide {
+    padding-top: 7%;
+    background-color: black ;
+    inset: 0;
+    position: absolute;
+    background-image: url(/image/backgrounds/abstract1.jpeg);
+    background-size: cover;
+    background-position: center; 
+    min-height: 100vh;
+    min-width: 100%;
+}   
+
+.slider .slide img {
+    padding-top: 10%rem;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    width: 50%;
+}
+
+.slider .slide .name {
+    font-family: 'Unbounded', cursive;
+    font-size: 3rem;
+    margin: auto;
+    width: 80%;
+    text-align: center;
+    padding-top: 1rem;
+}
+
+.slider .slide .description {
+    font-family: 'Fira Code', monospace;
+    width: 45%;
+    margin: auto;
+}
+
+.slider .slide .description .slider-price{
+    padding-bottom: 3rem;
 }
 
 .vehicles .vehicles-slider{
@@ -435,6 +436,7 @@ section{
 }
 
 .loan {
+    margin-top: 10%;
     background: url("/image/backgrounds/subscribe.png") no-repeat;
     padding-bottom: 10rem;
     background-size: cover;
