--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ section{
 #backToTopButton {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    left: 30px;
     z-index: 99;
     margin-top: 1rem;
     padding: .8rem 3rem;
@@ -314,6 +314,53 @@ section{
 .slider .slide .description .slider-price{
     padding-bottom: 3rem;
 }
+
+.contactsb {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 2.7rem;
+    right: 0;
+    background-color:#eee;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index: 2;
+  }
+  
+  .contactsb a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color:#002517;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .contactsb a:hover {
+    color:#35605A;
+  }
+  
+  .contactsb .close {
+    position: absolute;
+    top: 5rem;
+    right: 205px;
+    font-size: 36px;
+
+  }
+ 
+#contact {
+    cursor: pointer;
+}
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
+
+
+
 
 .newsletter{
     padding:6rem 2rem;
