--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ section{
 .carInfo {
     background-color: #eee;
     padding-top: 15rem;
-    text-align: center;
+   
 }
 
 .carInfo .content{
@@ -796,9 +796,24 @@ section{
 }
 
 .carInfo .content .carTitle {
-    font-size: 5rem;
-    text-align: left;
-    padding: 3rem 0 0rem 3rem;
+    font-size: 4rem;
+   padding-top: 6rem;
+   padding-left: 5rem;
+   position: absolute;
+}
+
+.carInfo .content .carPrice {
+    font-size: 4rem;
+    padding-top: 6rem;
+    padding-left: 125rem;
+}
+
+.carInfo .content .carTitle2 {
+    font-size: 2rem;
+   padding-top: .75rem;
+   padding-left: 5.3rem;
+   
+   position: relative;
 }
 
 .carInfo .row{
@@ -808,9 +823,9 @@ section{
     width: 100%;
 }
 
-.carInfo .content .row img {
-    width: 100%;
-    height: 100%;
+.carInfo img {
+   padding-left: 23rem;
+ 
 }
 
 .carInfo .content .row .box{
@@ -825,12 +840,17 @@ section{
 
 .carInfo .content .row .box h1 {
     font-size: 2rem;
+    
 }
 
 .carInfo .content .row .box .monthly {
     margin-left: 1rem;
     background-color: var(--green);
 }
+
+
+
+
 
 .representatives {
     background-color: #eee;
