--- a/css/style.css
+++ b/css/style.css
@@ -980,21 +980,20 @@ section {
 .carInfo .content .carTitle {
     font-size: 4rem;
     padding-top: 6rem;
-    padding-left: 5rem;
+    padding-left: 3rem;
     position: absolute;
 }
 
 .carInfo .content .carPrice {
     font-size: 4rem;
     padding-top: 6rem;
-    padding-left: 145rem;
+    padding-left: 80%;
 }
 
 .carInfo .content .carTitle2 {
     font-size: 2rem;
     padding-top: .75rem;
-    padding-left: 5.3rem;
-
+    padding-left: 4rem;
     position: relative;
 }
 
@@ -1006,8 +1005,7 @@ section {
 }
 
 .carInfo img {
-    padding-left: 23rem;
-
+    margin-left: 12%;
 }
 
 .carInfo .content {
@@ -1056,7 +1054,6 @@ section {
 
 }
 
-
 .carInfo .specs .tb h3 {
     padding-top: 5rem;
     padding-left: 7rem;
@@ -1073,7 +1070,6 @@ hr.solid {
     margin: auto;
 
 }
-
 
 .carInfo .specs .description {
     font-size: 2.5rem;
@@ -1277,6 +1273,10 @@ hr.solid {
         height: 35rem;
         width: 80%;
     }
+
+    .carInfo .content .carPrice {
+    padding-left: 75%;
+}
 }
 
 @media (max-width:1464px) {
@@ -1293,6 +1293,14 @@ hr.solid {
     .representatives .representatives-slider .box img {
         height: 30rem;
         width: 80%;
+    }
+
+    .carInfo .content .carPrice {
+        font-size: 3rem;
+    }
+
+    .carInfo .content .carTitle {
+        font-size: 3rem;
     }
 }
 
@@ -1316,6 +1324,13 @@ hr.solid {
         font-size: 3.5rem;
     }
 
+    .carInfo .content .carPrice {
+        font-size: 2rem;
+    }
+
+    .carInfo .content .carTitle {
+        font-size: 2rem;
+    }
 }
 
 @media (max-width:991px) {
@@ -1342,6 +1357,18 @@ hr.solid {
 
     .representatives .representatives-slider .box img {
         height: 30rem;
+    }
+
+    .carInfo .content .carPrice {
+        font-size: 2rem;
+    }
+
+    .carInfo .content .carTitle {
+        font-size: 2rem;
+    }
+
+    .carInfo .content .carTitle2 {
+        font-size: 1.75rem;
     }
 
 }
@@ -1392,6 +1419,18 @@ hr.solid {
         height: 60%;
     }
 
+    .carInfo .content .carPrice {
+        font-size: 1.75rem;
+    }
+
+    .carInfo .content .carTitle {
+        font-size: 1.75rem;
+    }
+
+    .carInfo .content .carTitle2 {
+        font-size: 1.5rem;
+    }
+
 }
 
 @media (max-width:450px) {
@@ -1415,5 +1454,20 @@ hr.solid {
     .representatives h1 {
         color: #ffffff;
         font-size: 5rem;
+    }
+
+    .carInfo .content .carPrice {
+        font-size: 1.25rem;
+        padding-top: 4rem;
+    }
+
+    .carInfo .content .carTitle {
+        font-size: 1.25rem;
+        padding-top: 4rem;
+    }
+
+    .carInfo .content .carTitle2 {
+        font-size: 1rem;
+        padding-top: .75rem;
     }
 }
