--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,7 @@ section {
 .selectionSB .slide li {
     padding: 20px;
     font-size: 1.5rem;
+    list-style-type: none;
 }
 
 /* Dropdown One */
